--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,8 +25,8 @@ jobs:
         ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Push Results
       env:
-        GITHUB_USER: "Shaffer John"
-        GITHUB_EMAIL: "www.pig2@qq.com"
+        GITHUB_USER: "bot"
+        GITHUB_EMAIL: "actions@github.com"
       run: |
         git config user.name "${GITHUB_USER}"
         git config user.email "${GITHUB_EMAIL}"
